<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="9dp"
                        android:layout_marginLeft="7dp"
                        android:text="@string/hi"
                        android:textColor="@color/teal_200"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="103dp"
                        android:layout_marginLeft="0dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="11dp">

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpagerSlider"
                    android:layout_width="420dp"
                    android:layout_height="160dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:dotsColor="@color/baby_blue"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="6dp"
                    app:dotsSpacing="2dp"
                    app:dotsWidthFactor="2.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewpagerSlider"
                    app:selectedDotColor="@color/pink"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sales"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/shop"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/categoryLL"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/categoryShoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoes"
                    android:layout_marginRight="5dp"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/categoryClothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clothes"
                    android:layout_marginRight="5dp"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@id/categoryShoes"/>

                <TextView
                    android:id="@+id/categoryGadgets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gadgets"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@id/categoryClothes"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/byPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/shopPrice"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/priceSeekBar">
                </TextView>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">

                <SeekBar
                    android:id="@+id/priceSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="220"
                    android:min="0"/>

                <TextView
                    android:id="@+id/minPriceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/maxPriceText"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/teal_200"
                    android:text="0"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    app:layout_constraintTop_toBottomOf="@+id/priceSeekBar"/>

                <TextView
                    android:id="@+id/maxPriceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="250"
                    android:textColor="@color/teal_200"
                    android:gravity="right"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/minPriceText"
                    app:layout_constraintTop_toBottomOf="@+id/priceSeekBar"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="9dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/minPriceText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minP"
                    app:layout_constraintEnd_toStartOf="@+id/maxPriceText2"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:gravity="left"/>

                <TextView
                    android:id="@+id/maxPriceText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/maxP"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/minPriceText2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SearchView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:queryHint="@string/search"
                    android:focusable="false"
                    android:textStyle="italic"
                    android:iconifiedByDefault="false"
                    android:background="@color/teal_300"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prod"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/allProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_prod"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:clickable="true"
                    android:textColor="@color/teal_200"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@id/textView61"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/viewCart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarProducts"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/viewCart" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/pink_button" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/cartBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView42"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/btn_2" />

                <TextView
                    android:id="@+id/textView82"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/cart"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView43"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/btn_3" />

                <TextView
                    android:id="@+id/textView83"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/wish"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>